# fivethirtyone-db

./: .gitignore  LICENSE  README.md  lifts.csv  noxfile.py  program-config.yaml  pyproject.toml  requirements.txt  wsgi.py
db-dump/: athlete.json  lifts.csv  workset.json
db-dump/2023-03/: workset.json
db-dump/2024-04/: athlete.json  lift.json  workset.json
fivethirtyone_db/: 531.sqlite  __init__.py  analysis.py  api.py  app.py  auth.py  blog.py  db.py  mysql_db.py  widgets.py
fivethirtyone_db/templates/: base.html
fivethirtyone_db/templates/auth/: login.html
fivethirtyone_db/templates/blog/: base.html  graphs-debug.html  graphs.html  index.html  program.html  workset.html
scripts/: cli.py  reset.py
tests/: test_integration.py
